# Computational-Geometry

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: atividade1.cpp  atividade2.cpp  atividade8.cpp  convex_hull.cpp  delaunay.cpp  draw_partition_2.cpp  draw_points_2.cpp  draw_polygon_2.cpp  draw_segments_3.cpp  draw_vectors_3.cpp  halfedge_info.cpp  polygon_2_create.cpp  polygon_2_triangulate.cpp  polygon_2_triangulate_good.cpp  trabalho1.cpp  triangulate_image.cpp
include/: DoxGroups.h  Types.h
src/: IO.cpp
src/Draw/: DrawPoints2.cpp  DrawVectors3.cpp
